--- a/en/about-us.html
+++ b/en/about-us.html
@@ -3,16 +3,35 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Terminal de Combustible Campana - Facilities</title>
+  <title>Terminal de Combustible Campana - About Us </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="keywords" content="">
   <link rel="shortcut icon" href="images/favicon.png">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="styles/css/main.css">
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "Terminal de Combustible Campana",
+    "legalName": "Terminal de Combustibles Campana SA",
+    "url": "tccar.com.ar",
+    "logo": "https://tccar.com.ar/images/logo_tcc.png",
+    "foundingDate": "2014-11",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Avenida del Libertador 498, 4to piso",
+      "addressLocality": "Ciudad Autónoma de Buenos Aires",
+      "addressRegion": "Buenos Aires",
+      "postalCode": "1001",
+      "addressCountry": "Argentina"
+    }
+    }
+  </script>
 </head>
 
 <body>
@@ -23,23 +42,25 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="index_en.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <a class="logo" href="home.html">
+          <h1 class="sr-only">Terminal de Combustible Campana</h1>
+        </a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
               <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="index_en.html">Home</a>
+              <a class="nav-link text-truncate" href="home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="nosotros_en.html">About Us</a>
+              <a class="nav-link text-truncate" href="about-us.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="instalaciones_en.html">Facilities</a>
+              <a class="nav-link text-truncate" href="facilities.html">Facilities</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="servicios_en.html">Services</a>
+              <a class="nav-link text-truncate" href="services.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
@@ -56,48 +77,44 @@
 
   <main>
 
-    <section class="instalaciones mb-5">
+    <section class="about-us">
 
-      <div class="banner banner-instalaciones">
+      <div class="banner banner-nosotros">
         <div class="container">
-          <h2 class="m-0" data-aos="fade-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Facilities</h2>
+          <h2 class="m-0" data-aos="fade-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">About Us</h2>
         </div>
       </div>
 
-      <div class="container">
+      <div class="container pt-md-4 mb-5">
         <div class="row">
 
-          <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-            <div class="box-instalaciones box-puerto bg-green mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-right" data-aos-duration="1000">
-              <div class="my-3 py-3">
-                <h2 class="display-5">Puerto</h2>
-                <p class="lead">Nuestra terminal posee un puerto de 250 metros que permite la cómoda recepción de embarcaciones de hasta 32 pies de calado y 220 metros de eslora, habilitado para operaciones de importación y exportación.</p>
-              </div>
-            </div>
-            <div class="box-instalaciones box-operaciones bg-gray mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500">
-              <div class="my-3 p-3">
-                <h2 class="display-5">Área de operaciones</h2>
-                <p class="lead">El puerto incluye un área de operaciones para carga de camiones, con disponibilidad para despachar hasta 4.000 m<sup>3</sup> diarios, con balanza fiscal.</p>
-              </div>
-            </div>
+          <div class="col-md-6 pr-md-4" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="300">
+            <p class="text-bigger">
+              We are an Argentine capital company that<span> since 2015</span> has commercially managed the Pobater S.A. Fuel and Hydrocarbon Products Storage Terminal. for first-line companies, both local and international.
+            </p>
+            <br>
+            <p class="text-bigger">
+              We permanently invest in <span>technology and training</span> to ensure the <span>efficiency and agility </span>of our operation, applying the highest international standards of safety and care for the environment.
+            </p>
           </div>
 
-          <div class="d-md-flex flex-md-equal w-100 pl-md-3 row-2">
-            <div class="box-instalaciones box-almacenamiento bg-gray mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
-              <div class="my-3 p-3">
-                <h2 class="display-5">Capacidad de almacenamiento</h2>
-                <p class="lead">La terminal cuenta con una capacidad de almacenamiento total de más 140 mil m<sup>3</sup>, distribuida en 11 tanques principales fiscales, con volúmenes de entre 26.000 y 6.000 m<sup>3</sup>, y 55 más pequeños, con volúmenes de 1.000 y 300 m<sup>3</sup>.</p>
-              </div>
-            </div>
-            <div class="box-instalaciones box-terreno bg-green mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
-              <div class="my-3 py-3">
-                <h2 class="display-5">Futura expansión</h2>
-                <p class="lead">Anticipando la creciente demanda de nuestros clientes, el terreno dispone de más de 90 hectáreas de espacio inactivo para desarrollar una futura expansión.</p>
-              </div>
-            </div>
+          <div class="col-md-6 pl-md-4" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="600">
+            <p class="text-bigger">
+              Our strategic location -at the entrance to the Hidrovía channel of Paraná River- and the comprehensive approach of our service, getting position as a reference provider in Campana (Buenos Aires Province) a state located at an equidistant distance from the productive nucleus which centers<span>around 70% </span> of the domestic demand for refined products in Argentina.
+            </p>
+              <br>
+            <p class="text-bigger">
+              We are the <span>strategic partner </span>for companies that seek to expand their capacity and enhance their logistics services in the region.
+            </p>
           </div>
-
         </div>
+      </div>
+
+<div class="pt-4 my-md-5 pt-md-5 border-top" style="max-width: 80%;
+margin: 0 auto;">  </div>
+
+      <div class="container pt-4 mb-5 text-center p-4 mb-3 bg-light rounded">
+        <iframe width="700" height="380" src="https://www.youtube.com/embed/3ddcJBvtRqY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
     </section>
@@ -113,7 +130,7 @@
           <div class="col-md-6 col-lg-5 mb-4 mb-lg-0">
             <span class="d-block mb-2 location">OFFICES</span>
             <address class="mb-1">
-              <i class="material-icons mb-5 mb-lg-2">location_on</i> Avda. del Libertador 498, 4th Floor<br>
+              <i class="material-icons mb-5 mb-lg-2">location_on</i> Avenida del Libertador 498, 4th Floor<br>
               (1001) Buenos Aires - Argentina<br>
             </address>
             <i class="material-icons">phone</i> Tel: <a href="tel:+54117078-55600">+54 11 7078-5560</a>
@@ -122,7 +139,7 @@
           <div class="col-md-6 col-lg-5 mb-3 mb-lg-0">
             <span class="d-block mb-2 location">TERMINAL</span>
             <address class="mb-1">
-              <i class="material-icons mb-5">location_on</i> Avda. Larrabure 650 <br>
+              <i class="material-icons mb-5">location_on</i> Avenida Larrabure 650 <br>
               (2804) Campana <br>
               Provincia de Buenos Aires
             </address>
@@ -131,16 +148,16 @@
           <div class="col-lg-2">
             <ul class="footer-nav mb-0">
               <li class="nav-item">
-                <a class="text-truncate" href="index_en.html">Home</a>
+                <a class="text-truncate" href="home.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="ntext-truncate" href="nosotros_en.html">About Us</a>
+                <a class="ntext-truncate" href="about-us.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="text-truncate" href="instalaciones_en.html">Facilities</a>
+                <a class="text-truncate" href="facilities.html">Facilities</a>
               </li>
               <li class="nav-item">
-                <a class="text-truncate" href="servicios_en.html">Services</a>
+                <a class="text-truncate" href="services.html">Services</a>
               </li>
             </ul>
           </div>
@@ -165,6 +182,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script src="script/main.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 </body>
 
 </html>
