--- a/en/facilities.html
+++ b/en/facilities.html
@@ -3,39 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Terminal de Combustible Campana - About Us</title>
+  <title>Terminal de Combustible Campana - Facilities</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="keywords" content="">
   <link rel="shortcut icon" href="images/favicon.png">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="styles/css/main.css">
-  <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
-      "@type": "Organization",
-      "name": "Terminal de Combustible Campana",
-      "legalName": "Elite Strategies Llc",
-      "url": "https://451.com",
-      "logo": "https://451.com/assets/img/logo-dark.png",
-      "sameAs": [
-        "https://www.instagram.com/451com",
-        "https://www.linkedin.com/company/451com"
-      ],
-      "foundingDate": "1945-08-28",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Avenida del Libertador 498, 4to piso",
-        "addressLocality": "Ciudad Autónoma de Buenos Aires",
-        "addressRegion": "Buenos Aires",
-        "postalCode": "1001",
-        "addressCountry": "Argentina"
-      }
-    }
-  </script>
 </head>
 
 <body>
@@ -46,25 +23,23 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="index_en.html">
-          <h1 class="sr-only">Terminal de Combustible Campana</h1>
-        </a>
+        <a class="logo" href="home.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
               <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="index_en.html">Home</a>
+              <a class="nav-link text-truncate" href="home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="nosotros_en.html">About Us</a>
+              <a class="nav-link text-truncate" href="about-us.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="instalaciones_en.html">Facilities</a>
+              <a class="nav-link text-truncate" href="facilities.html">Facilities</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="servicios_en.html">Services</a>
+              <a class="nav-link text-truncate" href="services.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
@@ -81,45 +56,48 @@
 
   <main>
 
-    <section class="about-us">
+    <section class="instalaciones mb-5">
 
-      <div class="banner banner-nosotros">
+      <div class="banner banner-instalaciones">
         <div class="container">
-          <h2 class="m-0" data-aos="fade-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">About Us</h2>
+          <h2 class="m-0" data-aos="fade-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Facilities</h2>
         </div>
       </div>
 
-      <div class="container pt-md-4 mb-5">
+      <div class="container">
         <div class="row">
 
-          <div class="col-md-6 pr-md-4" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="300">
-            <p class="text-bigger">
-              Somos una compañía de capitales argentinos que,<span> desde 2015</span> gestiona comercialmente la Terminal de almacenamiento de combustibles y productos hidrocarburíferos de Pobater S.A. para empresas de primera línea, tanto locales como internacionales.
-            </p>
-            <br>
-            <p class="text-bigger">
-              Invertimos permanentemente en <span>tecnología y capacitación</span> para asegurar la <span>eficiencia y agilidad </span>de nuestra operación, aplicando los más altos estándares internacionales de seguridad y cuidado del ambiente.
-            </p>
+          <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+            <div class="box-instalaciones box-puerto bg-green mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-right" data-aos-duration="1000">
+              <div class="my-3 py-3">
+                <h2 class="display-5">The Port</h2>
+                <p class="lead">Our terminal has a 250-meter port that allows the comfortable reception of vessels up to 32 feet draft and 220 meters in length, enabled for import and export operations.</p>
+              </div>
+            </div>
+            <div class="box-instalaciones box-operaciones bg-gray mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500">
+              <div class="my-3 p-3">
+                <h2 class="display-5">Operations Area</h2>
+                <p class="lead">The port includes an operations area for trucks loading with availability to dispatch up to 4,000 m<sup>3</sup> per day and also a fiscal balance.</p>
+              </div>
+            </div>
           </div>
 
-          <div class="col-md-6 pl-md-4" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="600">
-            <p class="text-bigger">
-              Nuestra ubicación estratégica -en el ingreso al canal Hidrovía del río Paraná- y el enfoque integral de nuestro servicio, nos posiciona como proveedor de referencia en Campana (provincia de Buenos Aires), municipio localizado a una distancia equidistante del núcleo productivo en el cual se centra
-              <span>alrededor del 70% </span> de la demanda doméstica de productos refinados de la Argentina.
-            </p>
-              <br>
-            <p class="text-bigger">
-              Somos el <span>socio estratégico </span>para las empresas que buscan ampliar su capacidad y potenciar su logística en la región.
-            </p>
+          <div class="d-md-flex flex-md-equal w-100 pl-md-3 row-2">
+            <div class="box-instalaciones box-almacenamiento bg-gray mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
+              <div class="my-3 p-3">
+                <h2 class="display-5">Storage Capacity</h2>
+                <p class="lead">The terminal has a total storage capacity of more than 140 thousand m<sup>3</sup>distributed in 11 main fiscal tanks with volumes between 6,000-26,000 m<sup>3</sup>and 55 smaller ones with volumes from 300-1,000 m<sup>3</sup>.</p>
+              </div>
+            </div>
+            <div class="box-instalaciones box-terreno bg-green mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
+              <div class="my-3 py-3">
+                <h2 class="display-5">Future Expansion</h2>
+                <p class="lead">Anticipating the growing demand of our clients, the land has more than 90 hectares of inactive space to develop a future expansion.</p>
+              </div>
+            </div>
           </div>
+
         </div>
-      </div>
-
-<div class="pt-4 my-md-5 pt-md-5 border-top" style="max-width: 80%;
-margin: 0 auto;">  </div>
-
-      <div class="container pt-4 mb-5 text-center p-4 mb-3 bg-light rounded">
-        <iframe width="700" height="380" src="https://www.youtube.com/embed/3ddcJBvtRqY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
     </section>
@@ -135,7 +113,7 @@ margin: 0 auto;">  </div>
           <div class="col-md-6 col-lg-5 mb-4 mb-lg-0">
             <span class="d-block mb-2 location">OFFICES</span>
             <address class="mb-1">
-              <i class="material-icons mb-5 mb-lg-2">location_on</i> Avda. del Libertador 498, 4th Floor<br>
+              <i class="material-icons mb-5 mb-lg-2">location_on</i> Avenida del Libertador 498, 4th Floor<br>
               (1001) Buenos Aires - Argentina<br>
             </address>
             <i class="material-icons">phone</i> Tel: <a href="tel:+54117078-55600">+54 11 7078-5560</a>
@@ -144,7 +122,7 @@ margin: 0 auto;">  </div>
           <div class="col-md-6 col-lg-5 mb-3 mb-lg-0">
             <span class="d-block mb-2 location">TERMINAL</span>
             <address class="mb-1">
-              <i class="material-icons mb-5">location_on</i> Avda. Larrabure 650 <br>
+              <i class="material-icons mb-5">location_on</i> Avenida Larrabure 650 <br>
               (2804) Campana <br>
               Provincia de Buenos Aires
             </address>
@@ -153,16 +131,16 @@ margin: 0 auto;">  </div>
           <div class="col-lg-2">
             <ul class="footer-nav mb-0">
               <li class="nav-item">
-                <a class="text-truncate" href="index_en.html">Home</a>
+                <a class="text-truncate" href="home.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="ntext-truncate" href="nosotros_en.html">Nosotros</a>
+                <a class="ntext-truncate" href="about-us.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="text-truncate" href="instalaciones_en.html">Facilities</a>
+                <a class="text-truncate" href="facilities.html">Facilities</a>
               </li>
               <li class="nav-item">
-                <a class="text-truncate" href="servicios_en.html">Services</a>
+                <a class="text-truncate" href="services.html">Services</a>
               </li>
             </ul>
           </div>
@@ -187,7 +165,6 @@ margin: 0 auto;">  </div>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script src="script/main.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
 </body>
 
 </html>
