--- a/en/index_en.html
+++ b/en/index_en.html
@@ -14,26 +14,22 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="styles/css/main.css">
   <script type="application/ld+json">
-    {
-     "@context" : "http://schema.org",
-     "@type" : "Organization",
-     "name" : "Terminal de Combustible Campana",
-     "legalName" : "Elite Strategies Llc",
-     "url" : "https://451.com",
-     "logo": "https://451.com/assets/img/logo-dark.png",
-     "sameAs" : [
-       "https://www.instagram.com/451com",
-       "https://www.linkedin.com/company/451com"
-      ],
-     "foundingDate":"1945-08-28",
-     "address": {
-       "@type": "PostalAddress",
-       "streetAddress": "Avenida del Libertador 498, 4to piso",
-       "addressLocality": "Ciudad Autónoma de Buenos Aires",
-       "addressRegion": "Buenos Aires",
-       "postalCode": "1001",
-       "addressCountry": "Argentina"
-     }
+  {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "Terminal de Combustible Campana",
+    "legalName": "Terminal de Combustibles Campana SA",
+    "url": "tccar.com.ar",
+    "logo": "https://tccar.com.ar/images/logo_tcc.png",
+    "foundingDate": "2014-11",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Avenida del Libertador 498, 4to piso",
+      "addressLocality": "Ciudad Autónoma de Buenos Aires",
+      "addressRegion": "Buenos Aires",
+      "postalCode": "1001",
+      "addressCountry": "Argentina"
+    }
     }
     </script>
 </head>
@@ -46,23 +42,23 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="index_en.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <a class="logo" href="home.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
               <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="index_en.html">Home</a>
+              <a class="nav-link text-truncate" href="home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="nosotros_en.html">About Us</a>
+              <a class="nav-link text-truncate" href="about-us.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="instalaciones_en.html">Facilities</a>
+              <a class="nav-link text-truncate" href="Facilities.html">Facilities</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="servicios_en.html">Services</a>
+              <a class="nav-link text-truncate" href="services.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
@@ -124,7 +120,7 @@
         <div class="container">
           <h2 class="text-center" data-aos="fade-up" data-aos-duration="1000">We are the strategic partner for companies which are seeking to expand their capacity and enhance their logistic operations in the region.</h2>
           <div class="know-more" data-aos="zoom-in" data-aos-duration="1200" data-aos-delay="600">
-            <a href="nosotros_en.html">View More</a>
+            <a href="about-us.html">View More</a>
           </div>
         </div>
       </div>
@@ -137,7 +133,7 @@
               <figure>
                 <img src="images/boat-from-front-view.png" alt="Puerto de 250 M">
               </figure>
-              <h4><span>250 mt</span> port enabled for exportation and importation services.</h4>
+              <h4><span>250 mt</span> port enabled for exportation and importation operations.</h4>
             </div>
 
             <div class="item text-center" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
@@ -192,16 +188,16 @@
           <div class="col-lg-2">
             <ul class="footer-nav mb-0">
               <li class="nav-item">
-                <a class="text-truncate" href="index_en.html">Home</a>
+                <a class="text-truncate" href="home.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="ntext-truncate" href="nosotros_en.html">About Us</a>
+                <a class="ntext-truncate" href="about-us.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="text-truncate" href="instalaciones_en.html">Facilities</a>
+                <a class="text-truncate" href="Facilities.html">Facilities</a>
               </li>
               <li class="nav-item">
-                <a class="text-truncate" href="servicios_en.html">Services</a>
+                <a class="text-truncate" href="services.html">Services</a>
               </li>
             </ul>
           </div>
