--- a/en/services.html
+++ b/en/services.html
@@ -14,26 +14,22 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="styles/css/main.css">
   <script type="application/ld+json">
-    {
-     "@context" : "http://schema.org",
-     "@type" : "Organization",
-     "name" : "Terminal de Combustible Campana",
-     "legalName" : "Elite Strategies Llc",
-     "url" : "https://451.com",
-     "logo": "https://451.com/assets/img/logo-dark.png",
-     "sameAs" : [
-       "https://www.instagram.com/451com",
-       "https://www.linkedin.com/company/451com"
-      ],
-     "foundingDate":"1945-08-28",
-     "address": {
-       "@type": "PostalAddress",
-       "streetAddress": "Avenida del Libertador 498, 4to piso",
-       "addressLocality": "Ciudad Autónoma de Buenos Aires",
-       "addressRegion": "Buenos Aires",
-       "postalCode": "1001",
-       "addressCountry": "Argentina"
-     }
+  {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "Terminal de Combustible Campana",
+    "legalName": "Terminal de Combustibles Campana SA",
+    "url": "tccar.com.ar",
+    "logo": "https://tccar.com.ar/images/logo_tcc.png",
+    "foundingDate": "2014-11",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Avenida del Libertador 498, 4to piso",
+      "addressLocality": "Ciudad Autónoma de Buenos Aires",
+      "addressRegion": "Buenos Aires",
+      "postalCode": "1001",
+      "addressCountry": "Argentina"
+    }
     }
     </script>
 </head>
@@ -46,23 +42,23 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="logo" href="index_en.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+          <a class="logo" href="home.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
           <div class="collapse navbar-collapse" id="nav">
             <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
               <li class="d-inline d-lg-none px-3 py-2 menu-close">
                 <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="index_en.html">Home</a>
+                <a class="nav-link text-truncate" href="home.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="nosotros_en.html">About Us</a>
+                <a class="nav-link text-truncate" href="about-us.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="instalaciones_en.html">Facilities</a>
+                <a class="nav-link text-truncate" href="facilities.html">Facilities</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="servicios_en.html">Services</a>
+                <a class="nav-link text-truncate" href="services.html">Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
@@ -93,8 +89,8 @@
 
               <div class="bg-darker mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
                 <div class="box-text mb-3 py-2 p-lg-3">
-                  <h3>Servicio Logístico</h3>
-                  <p class="lead">La terminal provee un servicio logístico integral eficiente, que incluye la carga y descarga de barcos y camiones con combustibles, tanques de almacenamiento y posterior despacho de embarcaciones y camiones.</p>
+                  <h3>Logistics Service</h3>
+                  <p class="lead">The terminal provides an efficient comprehensive logistics service which includes the loading and unloading of ships and trucks with fuel, storage tanks and subsequent dispatch of ships and trucks.</p>
                 </div>
                 <img class="shadow-sm mx-auto" src="images/servicios-1.png" alt="Hombres trabajando">
               </div>
@@ -102,11 +98,11 @@
               <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600">
                 <div class="box-text mb-3 py-2 p-lg-3">
                   <h3>More Services</h3>
-                  <p class="lead">También ofrecemos a nuestros clientes una gran variedad de servicios adicionales de tipo:</p>
+                  <p class="lead">We also offer our clients a wide variety of additional services such as:</p>
                   <ul class="srv">
-                    <li>Blending de productos </li>
+                    <li>Products blending</li>
                     <li>Bunkering</li>
-                    <li>Servicios a barcos</li>
+                    <li>Ship services</li>
                   </ul>
                 </div>
                 <img class="shadow-sm mx-auto" src="images/servicios-2.png" alt="Hombres trabajando">
@@ -131,7 +127,7 @@
             <div class="col-md-6 col-lg-5 mb-4 mb-lg-0">
               <span class="d-block mb-2 location">OFFICES</span>
               <address class="mb-1">
-                <i class="material-icons mb-5 mb-lg-2">location_on</i> Avda. del Libertador 498, 4th Floor<br>
+                <i class="material-icons mb-5 mb-lg-2">location_on</i> Avenida del Libertador 498, 4th Floor<br>
                 (1001) Buenos Aires - Argentina<br>
               </address>
               <i class="material-icons">phone</i> Tel: <a href="tel:+54117078-55600">+54 11 7078-5560</a>
@@ -140,7 +136,7 @@
             <div class="col-md-6 col-lg-5 mb-3 mb-lg-0">
               <span class="d-block mb-2 location">TERMINAL</span>
               <address class="mb-1">
-                <i class="material-icons mb-5">location_on</i> Avda. Larrabure 650 <br>
+                <i class="material-icons mb-5">location_on</i> Avenida Larrabure 650 <br>
                 (2804) Campana <br>
                 Provincia de Buenos Aires
               </address>
@@ -149,16 +145,16 @@
             <div class="col-lg-2">
               <ul class="footer-nav mb-0">
                 <li class="nav-item">
-                  <a class="text-truncate" href="index_en.html">Home</a>
+                  <a class="text-truncate" href="home.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="ntext-truncate" href="nosotros_en.html">About Us</a>
+                  <a class="ntext-truncate" href="about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="text-truncate" href="instalaciones_en.html">Facilities</a>
+                  <a class="text-truncate" href="facilities.html">Facilities</a>
                 </li>
                 <li class="nav-item">
-                  <a class="text-truncate" href="servicios_en.html">Services</a>
+                  <a class="text-truncate" href="services.html">Services</a>
                 </li>
               </ul>
             </div>
