Datos legales TCC

--- a/index.html
+++ b/index.html
@@ -14,26 +14,22 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="styles/css/main.css">
   <script type="application/ld+json">
-    {
-     "@context" : "http://schema.org",
-     "@type" : "Organization",
-     "name" : "Terminal de Combustible Campana",
-     "legalName" : "Elite Strategies Llc",
-     "url" : "https://451.com",
-     "logo": "https://451.com/assets/img/logo-dark.png",
-     "sameAs" : [
-       "https://www.instagram.com/451com",
-       "https://www.linkedin.com/company/451com"
-      ],
-     "foundingDate":"1945-08-28",
-     "address": {
-       "@type": "PostalAddress",
-       "streetAddress": "Avenida del Libertador 498, 4to piso",
-       "addressLocality": "Ciudad Autónoma de Buenos Aires",
-       "addressRegion": "Buenos Aires",
-       "postalCode": "1001",
-       "addressCountry": "Argentina"
-     }
+  {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "Terminal de Combustible Campana",
+    "legalName": "Terminal de Combustibles Campana SA",
+    "url": "tccar.com.ar",
+    "logo": "https://tccar.com.ar/images/logo_tcc.png",
+    "foundingDate": "2014-11",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Avenida del Libertador 498, 4to piso",
+      "addressLocality": "Ciudad Autónoma de Buenos Aires",
+      "addressRegion": "Buenos Aires",
+      "postalCode": "1001",
+      "addressCountry": "Argentina"
+    }
     }
     </script>
 </head>
