--- a/instalaciones.html
+++ b/instalaciones.html
@@ -13,6 +13,25 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="styles/css/main.css">
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "Terminal de Combustible Campana",
+    "legalName": "Terminal de Combustibles Campana SA",
+    "url": "tccar.com.ar",
+    "logo": "https://tccar.com.ar/images/logo_tcc.png",
+    "foundingDate": "2014-11",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Avenida del Libertador 498, 4to piso",
+      "addressLocality": "Ciudad Autónoma de Buenos Aires",
+      "addressRegion": "Buenos Aires",
+      "postalCode": "1001",
+      "addressCountry": "Argentina"
+    }
+    }
+  </script>
 </head>
 
 <body>
